--- a/lrc2011/lrc2011.md
+++ b/lrc2011/lrc2011.md
@@ -1,1 +1,5 @@
 ## 立人大学第一期
+
+立大一期的授课文字稿、部分学员文章和相关著名报道，已经收录在欧阳主编的《大学在人间》里，在此不重复收录。
+
+[下载地址《大学在人间》](https://github.com/LirenCollege/LRC/blob/master/download)
