重组致词、给学员的一封信

--- a/lrc2013/ouyang/03.md
+++ b/lrc2013/ouyang/03.md
@@ -12,11 +12,11 @@
 
 周斌的信，让我不得不需要多说一些话，就算是这封信的主题吧：
 
-我之所以一直对立大宣传不太在意……我也很惋惜北京欧阳每次加班到半夜用于在群里指导一些“细节”，我对她这种尽职尽责的态度和牺牲精神表示十二分的钦佩，但并不认为这个是明智的）而我的本职工作，我认为是课程设置，并告诉大家我的课程设置在今年成都立大中所占的实际定位。
+我之所以一直对立大宣传不太在意……我也很惋惜北京欧阳每次加班到半夜用于在群里指导一些「细节」，我对她这种尽职尽责的态度和牺牲精神表示十二分的钦佩，但并不认为这个是明智的）而我的本职工作，我认为是课程设置，并告诉大家我的课程设置在今年成都立大中所占的实际定位。
 
 ……
 
-我为什么这么强调我们组的特色，因为第一它是我想出来的，我有些“心虚”，怕我们组的成员还普遍停留在立大整体运作的水平上，浮躁骚动地又去鼓捣一些公知，而把“大学”之为“大学”的主体部分给遗忘了（自主求知＞被动灌输；课程[活动]＞导师！团队（人才）和行动（效果）本身＞制造虚幻的知名度。
+我为什么这么强调我们组的特色，因为第一它是我想出来的，我有些「心虚」，怕我们组的成员还普遍停留在立大整体运作的水平上，浮躁骚动地又去鼓捣一些公知，而把“大学」之为“大学」的主体部分给遗忘了（自主求知＞被动灌输；课程[活动]＞导师！团队（人才）和行动（效果）本身＞制造虚幻的知名度。
 
 我从后面往前面回复：
 
@@ -28,7 +28,7 @@
 
 【领域】我们尤其需要人文社科领域，如社会科学研究方法、逻辑学、政治学、哲学、历史学、经济学、艺术、文学等，也需要自然科学领域。
 
-【立场】我们区别立场不是“左右”之分，而是看他（她）是否真诚，也就是说，他（她）的研究、行动是出于他真正内心对事实、真理的热爱和探寻；他（她）不是“骑墙派”。
+【立场】我们区别立场不是“左右」之分，而是看他（她）是否真诚，也就是说，他（她）的研究、行动是出于他真正内心对事实、真理的热爱和探寻；他（她）不是“骑墙派」。
 
 【目标】我们希望老师不只是简单兜售自己的观点，而愿意在立人大学的平台上与年轻人一起做教育意义上的探讨。
 
@@ -36,7 +36,7 @@
 
 【地域】尽可能就近选择，但允许部分跨区域邀请。
 
-我这里想说的是，如果我们反复地来认为立大就有一个老毛病，就是崇拜公知，如果认为“立大整体运作的水平”是“浮躁骚动地又去鼓捣一些公知，而把‘大学’之为‘大学’的主体部分给遗忘了”，并且不断批评，恐怕这是三个问题：第一，没有看我的邮件，或者没有在意过我们之前的许多的讨论，没有了解过我们不断强调的“民间学者”、“独立学者”，甚至没有了解过立大的品质实在不是唯公知之上，实在是要民间独立。第二，我们心里太多“假想敌”。假想敌很可怕。因为它会使得我们原本真实的说明、解释都变成假的。第三，低估了团队。低估团队也很可怕，因为团队会在一些特别浅层的问题上没有来头地产生一些纠结。（我甚至不想说第四个问题：难道我们自己对大学的理解就是这么准确的吗？）
+我这里想说的是，如果我们反复地来认为立大就有一个老毛病，就是崇拜公知，如果认为“立大整体运作的水平」是“浮躁骚动地又去鼓捣一些公知，而把‘大学’之为‘大学’的主体部分给遗忘了」，并且不断批评，恐怕这是三个问题：第一，没有看我的邮件，或者没有在意过我们之前的许多的讨论，没有了解过我们不断强调的“民间学者」、“独立学者」，甚至没有了解过立大的品质实在不是唯公知之上，实在是要民间独立。第二，我们心里太多“假想敌」。假想敌很可怕。因为它会使得我们原本真实的说明、解释都变成假的。第三，低估了团队。低估团队也很可怕，因为团队会在一些特别浅层的问题上没有来头地产生一些纠结。（我甚至不想说第四个问题：难道我们自己对大学的理解就是这么准确的吗？）
 
 关于这个问题，至少我曾经说过很多遍，昨晚还说，希望成都有自己独特的浪漫。——和希望各组有自己的特色一样，我同样不希望任何一个人或者一组的做法是通用的做法。
 
@@ -44,13 +44,13 @@
 
 第二，关于宣传的问题。
 
-我个人是很讨厌用“宣传”这个词的。刚刚晚上还有一位参加了我们北京组LAT的好心人还建议我们说，我们应该在活动中多宣传立大。我从不喜欢这样。所以我连广州组的“宣讲会”的措辞都改变。
+我个人是很讨厌用“宣传」这个词的。刚刚晚上还有一位参加了我们北京组LAT的好心人还建议我们说，我们应该在活动中多宣传立大。我从不喜欢这样。所以我连广州组的“宣讲会」的措辞都改变。
 
 我在强调传播的时候，是基于这几个问题：首先，我们亟需向适合我们的人群发出邀请，或者告诉他们大学的另外一种可能；其次，我们在挑战期间，成功地完成一项活动，对整个团队的凝聚力和执行能力的产生和提升是至关重要的——上海、北京组已经证明了这个问题。
 
 但是，我从来没有说，你去把我们的招募通告贴多少份。我甚至一开始就提醒，微博不是全部，不是主要的工作——除非你让微博突然受到极大的关注——不要把时间花在发微博上面去。周斌现在发现的问题，恰恰是我很早就提醒了的。（那时候周斌是在管理微博，当然管理得很好）
 
-我从来就是说，在我们这个“传播”挑战的期间，你们会发现，我们绝不是用简单的做微博等方式就可以做好一切事。我很早就说，我们要做一个传播活动，就会要涉及到导师、课程问题，就会涉及团队建设问题，就必然要求我们去理解什么是立大、去规划做一个什么样的立大。
+我从来就是说，在我们这个「传播」挑战的期间，你们会发现，我们绝不是用简单的做微博等方式就可以做好一切事。我很早就说，我们要做一个传播活动，就会要涉及到导师、课程问题，就会涉及团队建设问题，就必然要求我们去理解什么是立大、去规划做一个什么样的立大。
 
 周斌现在说得很好的可能会吸引到别人的计划，不是早该设计了吗？每组宣传文案，不本来就是应该按照各组自己的需要量身打造吗？我至少上封邮件还在提醒这个方面的问题吧？更早之前我就发了游学筹办指南提到了导师的问题吧？
 
@@ -60,7 +60,7 @@
 
 但是问题呢？问题是，我们连最基础的一些东西都没搞清楚。
 
-周斌说，我每晚到半夜还在指导一些“细节”。
+周斌说，我每晚到半夜还在指导一些“细节」。
 
 我真心不乐意这么干。
 
@@ -78,13 +78,13 @@
 
 当然还有王飞、罗慧婷、穆布走、姚家怡、郑思源、曾海波、陆恺闻、蒋昊明等等也在做自己尽可能做的事情。
 
-但是我觉得，可能用力了，但是没有“力透纸背”的感觉，之所以没有这个感觉，而且我被“重复使用”，原因是我们最基础的工作没做够。
+但是我觉得，可能用力了，但是没有「力透纸背」的感觉，之所以没有这个感觉，而且我被「重复使用」，原因是我们最基础的工作没做够。
 
 我们团队的每个人，都有相当强的社会担当和道义感，但是就我来说，我对担当和道义理解得特别简单，那就是，完成自己承诺的事情，对人对事都如此。
 
 我对所有人的期待，都是限于各自在报名申请和面试时每个人自己的承诺。希望每个人还知道自己的承诺是什么。
 
-南方周末有位叫陈中小路的女记者，很弱小的一个经济记者，很有名气了，做过宋庆龄基金会的调查、5100水的调查。我听朋友说，她极顶聪明——从玩三国杀就看得出来。大家可以去搜她的名字。我记得我某次去南周的办公室，随手拿起了一本《南方传媒研究》，然后正好看到她的文章，就写，她怎么做5100水等等的调查，其实方法好笨啊，就是百度、谷歌等等各种方法都用上，搜索一点点关联。
+南方周末有位叫陈中小路的女记者，很弱小的一个经济记者，很有名气了，做过宋庆龄基金会的调查、5100 水的调查。我听朋友说，她极顶聪明——从玩三国杀就看得出来。大家可以去搜她的名字。我记得我某次去南周的办公室，随手拿起了一本《南方传媒研究》，然后正好看到她的文章，就写，她怎么做5100水等等的调查，其实方法好笨啊，就是百度、谷歌等等各种方法都用上，搜索一点点关联。
 
 你以为所有记者都是邵飘萍那种各种场合都游刃有余然后刨到好料吗？
 
@@ -94,7 +94,7 @@
 
 第一，谨慎。特别谨慎。谨慎而且低调。第二，运气（总是需要一些特别的运气，但运气不是可靠的）。第三，特别笨的一些办法，比如百度、谷歌甚至各种搜索软件都要用上（反正我连必应都用过，连翻墙软件用上然后谷歌都试过）。
 
-我曾经为了做一个北京市“囤地”的稿子，花了一天一夜还是两天两夜搜了北京市全部我能搜到的土地拍卖公告，然后做成表格，然后对照着去找房地产建设和售卖信息，以此来看哪些地块卖出去了，但是没有建设。然后去现场核实。你们知道北京市每年要卖出多少地啊，要盖多少楼啊！一个刚刚出道的记者，没有谁给你提供内幕消息，你不这么干，你能干什么？
+我曾经为了做一个北京市“囤地」的稿子，花了一天一夜还是两天两夜搜了北京市全部我能搜到的土地拍卖公告，然后做成表格，然后对照着去找房地产建设和售卖信息，以此来看哪些地块卖出去了，但是没有建设。然后去现场核实。你们知道北京市每年要卖出多少地啊，要盖多少楼啊！一个刚刚出道的记者，没有谁给你提供内幕消息，你不这么干，你能干什么？
 
 我也曾经为了跑一个土地问题，跑了一个县的60多个村庄。回收了调查问卷的，都有近40个。也搜了一切能搜到了这个县的土地招拍挂公告。最后，实际上我只用到了一个开头，以及一个表格。可是，没有这个表格，你一句话都不敢说——你没有底气的。
 
@@ -110,11 +110,11 @@
 
 希望踏实成为我们的作风。
 
-如果周斌这时候再看，我为什么一直在说“细节”问题，或许会更有感触些。
+如果周斌这时候再看，我为什么一直在说「细节」问题，或许会更有感触些。
 
 ——以上当完全旧事重提，希望从这周起，这两个问题不要再成为立大被反过来责问的问题，因为实实在在是伪问题。
 
-“这两个问题”是指：每个组该有自己的特色吗？传播本来不应该要结合本组的特色、在推进一些实质性的工作基础上进行吗？
+“这两个问题」是指：每个组该有自己的特色吗？传播本来不应该要结合本组的特色、在推进一些实质性的工作基础上进行吗？
 
 因为它们的答案都是肯定的：本来就应该如此。
 
@@ -135,4 +135,3 @@
 @布归
 
 2013/4/8凌晨 于北京
-
