--- a/lrc2013/ouyang/05.md
+++ b/lrc2013/ouyang/05.md
@@ -1,4 +1,4 @@
-给立大义工的每周一信 NO.5
+## 给立大义工的每周一信 NO.5
 
 立人大学义工小组周工作备忘（2013/4/15—2013/4/21）
 
@@ -6,7 +6,7 @@
 
 一周又过去了。我也从上海到了广州，估计明天就要回北京了。
 
-我以前在南方生活的时候，从来没有觉得广州的绿是如此美丽。我终于理解到一位朋友，第一次坐着火车，一路从北京到广州的时候，天刚亮，火车行驶在南岭之间，然后一路向南，她说了一个词，叫做“受宠若惊”。我当时想，这绿树繁花，又不是专门为你开为你长的，你受宠啥呢？
+我以前在南方生活的时候，从来没有觉得广州的绿是如此美丽。我终于理解到一位朋友，第一次坐着火车，一路从北京到广州的时候，天刚亮，火车行驶在南岭之间，然后一路向南，她说了一个词，叫做「受宠若惊」。我当时想，这绿树繁花，又不是专门为你开为你长的，你受宠啥呢？
 
 现在我明白了。我也觉得受宠若惊，放佛老天就在这为我这样的生灵种下了绿，就等着我来享受的。
 
@@ -22,13 +22,13 @@
 
 昨晚组长例会，还有三个小情形，第一，很多人都匆忙上线，或者迟到，然后手忙脚乱，开始调试设备，或者调了一晚上还是失败；第二，有组长还会遗漏小组里的工作；第三，还有人没到（周斌同学，一直没见到你呢）。
 
-此外，组长们现在也没有报告一份参加南京培训的名单（当然有一个理由是昨天的“波折”）。
+此外，组长们现在也没有报告一份参加南京培训的名单（当然有一个理由是昨天的「波折」）。
 
 我想，这大概是组长刚刚履任有的一些混乱情形，希望下周就好了。一个总共才 4 个组的例会，如果有 2 位不在，会就没法开了。
 
 也希望各组组长，与各组员之间，保持更紧密的联系，能形成大部分情况下，有事找组长的机制。
 
-上个星期，我们也开始使用 colorwork。这是一个好工具（其实 googlegroup也是个不赖的工具），但是目前使用率可能还不到 80%。
+上个星期，我们也开始使用 colorwork。这是一个好工具（其实 Google Group 也是个不赖的工具），但是目前使用率可能还不到 80%。
 
 我有些郁闷。我在组长例会时说，每个人都必须要使用上 colorwork，并且应该习惯。我甚至说了些极端的话，说一些非常重要的信息，只在 colorwork 上发布。
 
@@ -42,11 +42,11 @@
 
 所以，从这周起，至少我会主要在 colorwork 发布消息，而如果我在 colorwork 发布过的消息，我不负责在其他地方解释和回应。
 
-另外，我想结合南京培训昨天出现的戏剧性事件说一下财务与“成本”的问题。
+另外，我想结合南京培训昨天出现的戏剧性事件说一下财务与「成本」的问题。
 
 为什么这两件事情是结合在一起的？
 
-在得知南京 706 出现状况的时候，为什么我的第一反应是就取消培训。因为最大的问题是“组织”经费短缺。
+在得知南京 706 出现状况的时候，为什么我的第一反应是就取消培训。因为最大的问题是「组织」经费短缺。
 
 想想吧，每个人往返的交通平均下来差不多就是 300 吧，而我们有三四十人，如果场地和住宿费用过高，我表示很心疼（光交通费就够得上我几个月的收入了知道咩？）。
 
@@ -75,4 +75,3 @@
 布归
 
 2013年4月22日 于羊城广州
-
