--- a/lrc2013/ouyang/06.md
+++ b/lrc2013/ouyang/06.md
@@ -4,11 +4,11 @@
 
 此刻我还在南京，江北的我一位表哥家里，在小河同学的陪伴下，写这一封信。
 
-早上我和小河说，自己穿衣服、自己吃饭、自己走路，自己管理好自己，就是“奥特曼”。
+早上我和小河说，自己穿衣服、自己吃饭、自己走路，自己管理好自己，就是「奥特曼」。
 
 管理好自己，你就有超能力了。这也是这两三天培训我说得最多的主题。谢谢大家，我看到一部分人是可以管理好自己的，是有召唤的。尤其是前天关于一些具体项目的开放征集与讨论，昨天关于风险防控方案的讨论。我们自己提出自己的问题，自己来寻找解决方案，看来是可行的，是有魅力的。
 
-昨晚我还在和英强说，大概再往下，有一部分人可以进入到“教育”这一个话题的深入探索了——包括我自己。
+昨晚我还在和英强说，大概再往下，有一部分人可以进入到「教育」这一个话题的深入探索了——包括我自己。
 
 我建议往后立人有的一些培训机会，包括立人学堂，逐步考虑为立大的义工预留一些名额——当然，立大义工，完全可能自己来做一个先驱，在当下中国探索一整套的大学教育公益行动的人才培养模式。身在其中，与有荣焉。
 
@@ -16,7 +16,7 @@
 
 这些，英强也都表示了认可。
 
-实际上，立大的团队，就是这样进行着自己的“甄选”（这里的“选”，是“上帝的选民”的“选”，不是“竞选”的“选”，是自然选择，有感召的入选其中）。
+实际上，立大的团队，就是这样进行着自己的「甄选」（这里的「选」，是「上帝的选民」的「选」，不是「竞选」的「选」，是自然选择，有感召的入选其中）。
 
 我看得到我们团队的形成过程，这于我是最大的幸福。
 
@@ -28,9 +28,9 @@
 
 与此同时，研修班也要从申请过渡到甄选、面试阶段，那么，为研修班配置助教，也会成为我们的工作之一（当然首先主要是我和英强的工作之一）。
 
-然后就是筹款。实际上，筹款组为款项做的区分，“紧急”和“不紧急”是很好的思路。也就是说，不会因为我们筹不到 19 万，我们的团队就没法运营。不会的。但是我们希望有一点点钱，至少保障游学班做得有底气一些。我和英强，也不会把筹款的责任首先放在诸位义工身上，只是希望有兴趣甚至有能力和精力比我们做得更好的人，主动的加入进来——我相信有。
+然后就是筹款。实际上，筹款组为款项做的区分，「紧急」和「不紧急」是很好的思路。也就是说，不会因为我们筹不到 19 万，我们的团队就没法运营。不会的。但是我们希望有一点点钱，至少保障游学班做得有底气一些。我和英强，也不会把筹款的责任首先放在诸位义工身上，只是希望有兴趣甚至有能力和精力比我们做得更好的人，主动的加入进来——我相信有。
 
-以上所有的事，都是要用力地做去了。如果前段时间更多是用心用脑，接下来更多是要用手用力。——事情到具体执行阶段，没有比去“做”它本身更好的办法。
+以上所有的事，都是要用力地做去了。如果前段时间更多是用心用脑，接下来更多是要用手用力。——事情到具体执行阶段，没有比去「做」它本身更好的办法。
 
 不再多说，我要开始与小河回京的旅程了。
 
