--- a/lrc2013/ouyang/07.md
+++ b/lrc2013/ouyang/07.md
@@ -6,11 +6,11 @@
 
 我又回来了。
 
-此刻，我的窗外鸟群唧唧，我的内心“滋滋作响”——这一个词来自于华夏给学员的信。我喜欢华夏写的信，正如一直以来喜欢他不急不缓地说他的各种思考一样。
+此刻，我的窗外鸟群唧唧，我的内心「滋滋作响」——这一个词来自于华夏给学员的信。我喜欢华夏写的信，正如一直以来喜欢他不急不缓地说他的各种思考一样。
 
 我想，我是该回来继续写信了。但我依然不想像前面的 6 封信那样，只是我一个人不断地絮絮叨叨地讲。我不是一个太自信的人，对语言尤其没有信心，一个人说话，会有些担心给别人造成负担，因此希望有回响——或者是有人回应我，或者是我来回应大家。
 
-如果可能的话，我希望每周一信在我们这些义工中被坚持下来，但不是仅仅我来写，而是华夏也可以写，孙健也可以写，凯鹏可以写，晓伟可以写，王飞可以写，还有苇杭、玉擎、石头、李喆……所有人都可以写。
+如果可能的话，我希望每周一信在我们这些义工中被坚持下来，但不是仅仅我来写，而是华夏也可以写，孙健也可以写，凯鹏可以写，晓伟可以写，王飞可以写，还有苇杭、玉擎、石头、李喆......所有人都可以写。
 
 回到华夏的信。
 
@@ -26,7 +26,7 @@
 
 那天面试时有人问，立大期待自己的学员出来以后是什么样。我回答说：一个立起来的人呀，或者多说一点，一个有自信有自我的人啊。
 
-这位同学觉得我说得太简略。似乎描述得字数足够多，才叫全面。他另外又把这个目标转化为他的表达，是“现代公民”。我说，你怎么转换都可以，但我想表达的，真的就只有这几个字。
+这位同学觉得我说得太简略。似乎描述得字数足够多，才叫全面。他另外又把这个目标转化为他的表达，是「现代公民」。我说，你怎么转换都可以，但我想表达的，真的就只有这几个字。
 
 华夏的表达比我更好些。诚实的人，有趣的人，有真爱的人，有一颗滋滋作响的、自我的、有梦的、充满好奇的心的人……我喜欢华夏的表达，甚于我自己的表达——请原谅我的语词匮乏。
 
@@ -40,15 +40,15 @@
 
 过去的一个月，包括搬家、带小河，这些问题都非常巨大。
 
-每一次要搬家的时候，我都想彻底离开北京，离开北京的想法起码都有过十次以上了，去年底的时候，我和朋友把所有家具家电都挤走了，连凉席都不例外，只剩下了些衣服和书，以及一点锅碗瓢盆（之所以说“一点”，是连多余的锅子实际都寄走或送人了的），连小狗都养不了，花草也送了人。去了趟成都，决意要做立大，然后就把自己留了下来。
+每一次要搬家的时候，我都想彻底离开北京，离开北京的想法起码都有过十次以上了，去年底的时候，我和朋友把所有家具家电都挤走了，连凉席都不例外，只剩下了些衣服和书，以及一点锅碗瓢盆（之所以说「一点」，是连多余的锅子实际都寄走或送人了的），连小狗都养不了，花草也送了人。去了趟成都，决意要做立大，然后就把自己留了下来。
 
-我现在住的地方，接近北六环，是中国经济时报的大院，去年立大二组的学员打地铺的房间的楼下。两年前我从这里搬走，两年间搬了四次，北六环和东南六环，都走了一大圈了。朋友说，“狡兔三窟”都赶不上你了，要睡遍大京城么？——是这样的。
+我现在住的地方，接近北六环，是中国经济时报的大院，去年立大二组的学员打地铺的房间的楼下。两年前我从这里搬走，两年间搬了四次，北六环和东南六环，都走了一大圈了。朋友说，「狡兔三窟」都赶不上你了，要睡遍大京城么？——是这样的。
 
 京居不易啊。
 
-不过想起搬走又搬回，从白住宿舍到花钱租一套前领导的空房子，我们当时是部门解散，现在好几位“前领导”也被从这个大院“撵走”，想想大帝都有些破事怂事真是……
+不过想起搬走又搬回，从白住宿舍到花钱租一套前领导的空房子，我们当时是部门解散，现在好几位「前领导」也被从这个大院「撵走」，想想大帝都有些破事怂事真是……
 
-小河让我着实有些抓狂。我都有些忍不住要给他改名字，把“小河”改成“小禾”好了，看能不能变成一个温顺的小禾苗，别像个会怒吼的小河流。不过这又让我禁不住想，难道我的内心也不过是想“规训”孩子抹杀他的天性的？
+小河让我着实有些抓狂。我都有些忍不住要给他改名字，把「小河」改成「小禾」好了，看能不能变成一个温顺的小禾苗，别像个会怒吼的小河流。不过这又让我禁不住想，难道我的内心也不过是想「规训」孩子抹杀他的天性的？
 
 前几天我想把他送走，但是后来发现，我内心深处常常有他在这住不长的想法，很多事情就不会长远规划，难道这样不是反而害了他？
 
@@ -65,7 +65,7 @@
 如果给未来一个期许，假以三年甚至五年，我们会更加自信，成为一个更加完备、更有力量的我们，放佛成为一个更加健硕的人。
 
 
-写着这封信的时候，从王东那里得知了co-china被取消的消息。
+写着这封信的时候，从王东那里得知了 co-china 被取消的消息。
 
 现在这一消息已经在网上周知。
 
