--- a/lrc2013/ouyang/09.md
+++ b/lrc2013/ouyang/09.md
@@ -2,15 +2,15 @@
 
 亲爱的各位：
 
-此信将是发到各位的 gmail 了，希望大家都能正常收到。
+此信将是发到各位的 Gmail 了，希望大家都能正常收到。
 
 前几天回了一趟老家，把小河送走了。因为回家，也欠了一封信，欠了好多工作，望见谅。
 
 回家不愉快，农村有一种排斥的力量，或者是束缚的力量，好像天罗地网，每个人都可以给你织进去，钻不出来，很难受，很痛苦，最终不愉快地走了，未必就是钻出来了，因为它们已经根深蒂固。
 
-有时候我就会想，“我”到底是一个什么东西，在这样一个地方出生，在别人的眼里不过就是从一个肉球球，然后长成了一个孩子，然后长成了一个其实挺大但是居然还没有成家的不知道是什么样的人的人。如果说人是社会性的，那我要对自己进行定位或者定义，真的是一件头大的事。
+有时候我就会想，「我」到底是一个什么东西，在这样一个地方出生，在别人的眼里不过就是从一个肉球球，然后长成了一个孩子，然后长成了一个其实挺大但是居然还没有成家的不知道是什么样的人的人。如果说人是社会性的，那我要对自己进行定位或者定义，真的是一件头大的事。
 
-就是我自己，曾经在这小山村里存在下来，那时候哪里又知道“我”是什么呢？至少我也回忆不起来，小时候我到底怎么看待我自己。
+就是我自己，曾经在这小山村里存在下来，那时候哪里又知道「我」是什么呢？至少我也回忆不起来，小时候我到底怎么看待我自己。
 
 好了，言归正传。
 
@@ -36,9 +36,9 @@
 
 当然我更为忧虑的还是，我们的回馈物品，想法很多，但是似乎一直没有看到有效的执行。如果这些事情一定要拖到游学期间做的话，老实说，我会觉得不靠谱。希望原本负责这一块事情的同学们，把一些事情做到之前，或者至少要有个时间线，逐步完成。
 
-除此之外，就是“邮递员”这个项目，该是马上启动了。
+除此之外，就是「邮递员」这个项目，该是马上启动了。
 
-按照我的设想，应该是昨天或者最迟今天（7 月 1 日），启动“邮递员”项目，送出第一批书，以掀起第二波传播的高潮。
+按照我的设想，应该是昨天或者最迟今天（7 月 1 日），启动「邮递员」项目，送出第一批书，以掀起第二波传播的高潮。
 
 7 月 7 日之后，启动签名送书之类的项目，掀起第二波高潮（刘瑜、周濂夫妇已经为我们签了 40 多本书了）。
 
