--- a/lrc2013/ouyang/10.md
+++ b/lrc2013/ouyang/10.md
@@ -3,7 +3,7 @@
 亲爱的各位：
 
 我们已经开学，我的每周一信断断续续，正好写到第 10 封。
-  
+
 这几天，我淋了武汉的雨水，蒸了广深的桑拿，不知道去到上海，要迎接我的，又会是什么。
 
 这几天，我一直在心里写这封信，而同时，又希望有一封给导师的信，一封可以公开的信。昨天晚上到现在，一会儿到客厅，一会儿到阳台，一会儿坐着，一会儿躺下，太阳已经老高，我一句话都没写成。大概，这就是思绪打了结。
@@ -13,16 +13,16 @@
 我想说说从开始做立大到现在，这一路，我对我自己做的这件事的理解。现在，正是时候。
 
 时间翻回到一年前，2012 年 6 月，我决意加入立人。成为立人的义工有一道题，和所有进入立大的人一样要回答的，那就是，陈述自己独立做某件事的经历。
-  
+
 那时候我觉得很不屑，我说，我从大学一毕业，进入到第一家媒体，我的第一份工作开始，我所有的事情都是独立完成的，甚至在大学，也是独立或者合伙或者带团队做过各种事情。
 
-但是，我现在才准确地判断到，那绝对不是“独立”的涵义。
+但是，我现在才准确地判断到，那绝对不是「独立」的涵义。
 
 比如说，虽然我在媒体一直都以单枪匹马的方式去采访、调查，走过了许多的地方，也操作了不少选题，但是，难道我的选题都是自己想做就做的吗？难道我的稿件完全是自己写了就能发，是自己要呈现的那个摸样吗？尤其是，难道我不是经常地要面对大团队小团队里各种其实完全不想面对的矛盾吗？难道不是每天要揣摩圣意，任由阉割吗？那些揽获的虚名，难道没有丝毫凭借其他人的觥筹交错间的利益勾兑？
 
-实际上，你只有一个时候是“独立”的，那就是，当你的稿件出了问题、惹了麻烦的时候，你才“独立”了——你文责自负，要被“雪藏”还是要被写检查，还是要干脆被开除出记者队伍，你是“独立”的，负全责。
+实际上，你只有一个时候是「独立」的，那就是，当你的稿件出了问题、惹了麻烦的时候，你才「独立」了——你文责自负，要被「雪藏」还是要被写检查，还是要干脆被开除出记者队伍，你是「独立」的，负全责。
 
-实际上，这不是独立，这是“单独”，说好听一点，是独当一面，说不好听一点，就是在一台巨大的机器中比较耐损耗、不用太烦心的一颗螺丝钉。
+实际上，这不是独立，这是「单独」，说好听一点，是独当一面，说不好听一点，就是在一台巨大的机器中比较耐损耗、不用太烦心的一颗螺丝钉。
 
 前一段时间，我一直在鼓动我的前同事刘建锋独立出来，成为一个真正意义上的独立记者。这时候，我已经认为，独立真的是自己对自己行使完全的责任和权利，尤其不仰仗机构、权贵、金钱（也包括家庭、世俗吧），自己为自己代言，自己来完成自己的创意，做自己的事。我比去年更明确地对他说，让那些蝇营狗苟、尔虞我诈、油嘴滑舌、油头滑面的家伙们见鬼去吧，凭什么让他们决定你该写什么、该说什么、该做什么？
 
@@ -34,11 +34,11 @@
 
 很多人直到现在，还在认为立人大学应该和政府合作，应该和大财主合作，接受投资。
 
-立人大学的“不合作”不是对抗式地不合作，立人大学的不合作，只是独立的显示。我们当然不拒绝任何人给我们的支持，但这种支持如果带有条件，要强奸立人大学对“立人”和“人”的理解，合作当然也就很虚伪。
+立人大学的「不合作」不是对抗式地不合作，立人大学的不合作，只是独立的显示。我们当然不拒绝任何人给我们的支持，但这种支持如果带有条件，要强奸立人大学对「立人」和「人」的理解，合作当然也就很虚伪。
 
 而换一个角度，立人大学的独立是不是可能？我觉得可能。
 
-某种意义上说，立人大学根本不是“理想”的化身，是顺应时势的一个稍微靠前的行动。立人大学会提供给这个时代一些不屈的人改变自我与社会的机会——我们提供这些人办一所自己理想的大学的机会。
+某种意义上说，立人大学根本不是「理想」的化身，是顺应时势的一个稍微靠前的行动。立人大学会提供给这个时代一些不屈的人改变自我与社会的机会——我们提供这些人办一所自己理想的大学的机会。
 
 世界大势浩浩汤汤。民间要做自己办大学的梦，必然不可能被强行植入别人的梦。
 
@@ -50,11 +50,11 @@
 
 许以十年，立大该是一个怎样的模样子？
 
-我还想说说关于“开放”。
+我还想说说关于「开放」。
 
-昨天，我在深圳见到一个四年没见了的学妹，在高铁站，她笑问我说：“你还那么专制吗？”
+昨天，我在深圳见到一个四年没见了的学妹，在高铁站，她笑问我说：「你还那么专制吗？」
 
-在过去，我是一个挺严苛的人，虽然我不接受“专制”这个词（因为我大部分是对事不对人，并没有级别的意识和自己的架子）。
+在过去，我是一个挺严苛的人，虽然我不接受「专制」这个词（因为我大部分是对事不对人，并没有级别的意识和自己的架子）。
 
 4 月份的时候，是我们活动做得非常频繁的一段时间，但是也是出错率极高的时候，我有好几次都想对英强咆哮说，天天出错天天补漏，再这样和一帮子不成熟的学生合作下去，我不干了！
 
@@ -68,15 +68,15 @@
 
 我决定真的让立大做成你们自己的样子。
 
-而我看到的是，一个远远超过任何一个人视野和智力的事业。因为你会看到，立大是真正的教育者，因为它允许想要拿它做实验的人实验。立大是真正可以培养开放社会、自由社会的“全人”的地方，因为你很难想象到，一个不够开放、包容的地方，能让人知道开放是什么，如何才能开放。
+而我看到的是，一个远远超过任何一个人视野和智力的事业。因为你会看到，立大是真正的教育者，因为它允许想要拿它做实验的人实验。立大是真正可以培养开放社会、自由社会的「全人」的地方，因为你很难想象到，一个不够开放、包容的地方，能让人知道开放是什么，如何才能开放。
 
-那开放是推卸责任吗？某种意义上说，是的。但这正是它“对”的地方，因为没有任何一个人，可以准确地设想到开放的后果，设计到一个社会甚至一个小团队的方方面面。
+那开放是推卸责任吗？某种意义上说，是的。但这正是它「对」的地方，因为没有任何一个人，可以准确地设想到开放的后果，设计到一个社会甚至一个小团队的方方面面。
 
 我确实比任何时候都有耐心和一起做立大的人成长。我想，这也是教育者必备的品质。
 
 说到这，我又想到一个情景。
 
-我在假设，如果时间倒流8年，甚至9年，我正在为着上大学而“奋斗”的光景，我想到，如果那个时候，有一位叫李英强或者刘道玉的人，来告诉我说：孩子，其实你可以不上大学。那时候，我一定认为他有毛病，或者至少是不屑吧。如果那时候他要来和我说，你来上立人大学嘛，那些狗屁大学都很虚伪。我想我可能都懒得和他说话，家里人肯定把他当做骗子（刘道玉的真实性可能会高些，毕竟他是赫赫有名的校长，如果我和家人都知道这一点的话）。
+我在假设，如果时间倒流8年，甚至9年，我正在为着上大学而「奋斗」的光景，我想到，如果那个时候，有一位叫李英强或者刘道玉的人，来告诉我说：孩子，其实你可以不上大学。那时候，我一定认为他有毛病，或者至少是不屑吧。如果那时候他要来和我说，你来上立人大学嘛，那些狗屁大学都很虚伪。我想我可能都懒得和他说话，家里人肯定把他当做骗子（刘道玉的真实性可能会高些，毕竟他是赫赫有名的校长，如果我和家人都知道这一点的话）。
 
 在前天的开学典礼上，刘先生几乎通篇都在讲这样的话：大学有啥了不起，坏得很，不上大学好得很，游学好得很，真实，不为文凭，不为虚名，为真才实学，为自由开放，好得很。
 
@@ -88,27 +88,27 @@
 
 但最有用的时候，是在自己有所求的时候。
 
-曾经我看李英强的经历，那些离家出走的事儿，然后说什么“离开你的父母”的事儿，什么父母难受是自己不独立的事，如果不是我自己要遭遇挣脱家庭而独立的事儿，想必我就没法真的理解这种“独立”的意味。
+曾经我看李英强的经历，那些离家出走的事儿，然后说什么「离开你的父母」的事儿，什么父母难受是自己不独立的事，如果不是我自己要遭遇挣脱家庭而独立的事儿，想必我就没法真的理解这种「独立」的意味。
 
 如果不是自己想要独立，想做一件独立的事，想必我也听不到立大在2012年底对我的召唤。
 
 从教育的意义上讲，这是什么情况呢？
 
-我想，就是“自主”的内涵。
+我想，就是「自主」的内涵。
 
 如果自己不带问题，不存有困惑，是无法从任何一种教育中受到教育的。
 
-老师的作用是什么？帮助自己发现问题，或者说真正地发现问题。大概，这就是苏格拉底式的“助产士”。这是真正被需要的老师。
+老师的作用是什么？帮助自己发现问题，或者说真正地发现问题。大概，这就是苏格拉底式的「助产士」。这是真正被需要的老师。
 
 这大概是我们关于教育的一个非常具体的愿景吧。
 
 还有另外一个词，在立大讲得特别多，几乎任何时候都用，但是对这个词，我是在前几天，有一种突然的茅塞顿开、醍醐灌顶的感觉。
 
-这个词是“互联网”。
+这个词是「互联网」。
 
 如果我们不做众筹，如果不翻墙，不看禁书，我们大概永远没法理解互联网对立大的真实意义。
 
-互联网已经支撑着立大立了起来，在一般人没有察觉的时候。我们在组织、动员等各个方面已经使用到了互联网的多种工具和平台，例如问卷星、Googlegroups、Googledrive、gmail、YY、skype甚至包括 QQ、微信，也有微博、豆瓣、追梦众筹等等。我们还可以使用很多的工具和平台、手段。
+互联网已经支撑着立大立了起来，在一般人没有察觉的时候。我们在组织、动员等各个方面已经使用到了互联网的多种工具和平台，例如问卷星、Google Groups、Google Drive、Gmail、YY、skype 甚至包括 QQ、微信，也有微博、豆瓣、追梦众筹等等。我们还可以使用很多的工具和平台、手段。
 
 在过去的很长一段时间，我们（包括我）在讨论互联网是否将取代传统媒体、电纸书是否将取代纸质书的时候，我们考虑的重点还是成本、阅读习惯等层面的问题，以此来做评价。
 
@@ -122,7 +122,7 @@
 
 我一直对立大做网络社区、公开课等等是有所犹疑的，直到最近。
 
- 游学之后，希望有一支新的立大团队，有几位对“互联网”、“大学教育”、“民间行动”这三个关键词同时有强烈兴趣的人，一起探究下去。
+ 游学之后，希望有一支新的立大团队，有几位对「互联网」、「大学教育」、「民间行动」这三个关键词同时有强烈兴趣的人，一起探究下去。
 
 所以，这一封信，是一次总结，也是一次邀请，对人的邀请，对未来的邀请。
 
