--- a/lrc2013/ouyang/01.md
+++ b/lrc2013/ouyang/01.md
@@ -10,7 +10,7 @@
 
 立大官方微博，在刘智的努力下，每天通过云中小鸟定时发布一条微博，虽然也出现过小错误，但是在一个好的方向发展。昨天发布的凤凰卫视的视频，之前我都不知道，谁知道刘智怎么找到的。
 
-在 3 月 21 日之后，四组都建立了义工小组微博，@LRCx成都甚至出现了特别棒的#思享立大#、#少年在成都#等专栏，@LRCx广州 也开始做有意识的立大专题介绍。非常感谢各位的努力。这个“微群”的建立说明，各组、个人发挥自己的能量和才智，可以把我们的平台建得更好。
+在 3 月 21 日之后，四组都建立了义工小组微博，@LRCx成都甚至出现了特别棒的#思享立大#、#少年在成都#等专栏，@LRCx广州 也开始做有意识的立大专题介绍。非常感谢各位的努力。这个「微群」的建立说明，各组、个人发挥自己的能量和才智，可以把我们的平台建得更好。
 
 杨玉擎加入了豆瓣小站的管理，已经把立大文集、往期视频等上传到豆瓣小站上，且进行了编辑、排版等，使得我们的小站渐渐有了内容，有了一个小站的面貌（蔡伟和孙健也会帮忙上传一些相关图片和视频，也欢迎其他往期的学员、义工继续上传），杨玉擎还会有更多的计划，希望在完成这些基础的建设工作之后，大施拳脚。谢谢玉擎的耐心和努力。
 
@@ -18,11 +18,11 @@
 
 微信公众平台还是我在维护着，现在的好友已经过了二百五，每天的回复信息至少是一二十条，昨天甚至有五十来条。但是我想后期会有义工加入到这项工作中来，比我做得要好。
 
-义工们还在留意各种平台、渠道的应用或者利用，包括周斌留意到凯迪社区的开放平台，王梓安等和北斗网的合作，陈玫联系到广州的讲座网，等等，昨天，我还和北京组的张关昌聊到，希望他尽快配合“一起办学”计划，建设一个线下的合作伙伴资源网络。
+义工们还在留意各种平台、渠道的应用或者利用，包括周斌留意到凯迪社区的开放平台，王梓安等和北斗网的合作，陈玫联系到广州的讲座网，等等，昨天，我还和北京组的张关昌聊到，希望他尽快配合「一起办学」计划，建设一个线下的合作伙伴资源网络。
 
 ### 2.	团队建设
 
-昨天（3 月 23 日），我在北京和驻京的几位义工在 706 见了一面，务实务虚地聊了有两个多小时，有一项重要的决定是，让北京组的几位义工组成立大暑期学校筹委会的“办公室”，将会负责整体文件、资料的整理和各组之间的协调工作，并且为各组提供一些整体的支持。谢谢张关昌、蔡伟、陈师明、孙健、刘羽西、冯冬铭果断挑起这个担子。
+昨天（3 月 23 日），我在北京和驻京的几位义工在 706 见了一面，务实务虚地聊了有两个多小时，有一项重要的决定是，让北京组的几位义工组成立大暑期学校筹委会的「办公室」，将会负责整体文件、资料的整理和各组之间的协调工作，并且为各组提供一些整体的支持。谢谢张关昌、蔡伟、陈师明、孙健、刘羽西、冯冬铭果断挑起这个担子。
 
 当然很遗憾，贺慧佳离开了我们这个团队。
 
@@ -42,7 +42,7 @@
 
 ### 4.	设计工作
 
-设计组几位义工在YY语音上进行了讨论（遗憾叶丹妮没有参加）。考虑到设计组的几位义工无法真正按照一个工作坊的方式进行创意、设计，几位义工可能需要用分工的方式进行合作。
+设计组几位义工在 YY 语音上进行了讨论（遗憾叶丹妮没有参加）。考虑到设计组的几位义工无法真正按照一个工作坊的方式进行创意、设计，几位义工可能需要用分工的方式进行合作。
 
 我看到希萌也为立大设计了一个海报，这种做法值得鼓励。欢迎有想法的伙伴们及时参与到自己能参与的工作中去，人多力量大。
 
@@ -68,7 +68,7 @@
 
 游学内容：讲座、学思分享、议事、读书会、社会调研、自主活动等（各城市游学计划约于5月中旬公布）
 
-游学组织：立人大学 2013 年暑期学校筹委会统筹，各城市“一起办学”义工小组具体组织
+游学组织：立人大学 2013 年暑期学校筹委会统筹，各城市「一起办学」义工小组具体组织
 
 游学费用：游学期间交通、食宿费用自理。
 
@@ -78,11 +78,11 @@
 
 时间：3 月上旬至 5 月 10 日（高中生延迟到 6 月 12 日）
 
-笔试答题平台：问卷星http://t.cn/zY8LENa 
+笔试答题平台：问卷星http://t.cn/zY8LENa
 
 名单发布平台：豆瓣小站http://t.cn/zY3LNL0
 
-注：（1）笔试结果不计分，只有“通过”&“不通过”两种情形；（2）笔试题没有标准答案。
+注：（1）笔试结果不计分，只有「通过」&「不通过」两种情形；（2）笔试题没有标准答案。
 在线报名
 
 时间：4 月 1 日至 5 月 10 日（高中生不迟于 6 月 12 日）
@@ -145,13 +145,13 @@
 
 宣传册面向希望进一步了解立人大学的人群；
 
-文集面向希望对立人大学、开放办学深度了解，或希望了解“大学是什么”、“如何度过大学”的人群。
+文集面向希望对立人大学、开放办学深度了解，或希望了解「大学是什么」、「如何度过大学」的人群。
 
 北京组暨办公室成员负责文集、宣传册（含海报）的制作。张旭超、李苇杭、叶丹妮负责明信片等周边产品的设计制作。各组规划各组需要的其他资料设计、制作。
 
 以上产品投放的渠道包括网络，也包括一些可以合作的书店、咖啡馆或公共空间等。
 
-视频短片也会按照不同的需求进行系列拍摄、制作，目前正在进行拍摄的是“大学是什么，立人大学是什么？”将以明快、欢乐、简短的风格展现，快速吸引希望“突破大学围墙，实现自我成长”的青年人群。
+视频短片也会按照不同的需求进行系列拍摄、制作，目前正在进行拍摄的是「大学是什么，立人大学是什么？」将以明快、欢乐、简短的风格展现，快速吸引希望「突破大学围墙，实现自我成长」的青年人群。
 
 希望摄像摄影组的义工们抓紧完成。
 
@@ -165,15 +165,15 @@
 
 【建议其他组也参照这样的方式规划自己的导师】
 
-上海组准备在追梦网上发起一个小额筹款活动，以解决前期传播活动的基本资金，也达到传播的效果。我特别问了上海组的苇杭，她觉得这个事情是“好玩”而且“必要”的，所以我表示支持。
+上海组准备在追梦网上发起一个小额筹款活动，以解决前期传播活动的基本资金，也达到传播的效果。我特别问了上海组的苇杭，她觉得这个事情是「好玩」而且「必要」的，所以我表示支持。
 
-上海组准备做一次豆瓣同城活动，邀请王晓渔老师参加，主题为“当我们谈论大学的时候，我们谈论什么”。同样支持。尽快落实吧。【建议上海组同时考虑朱海就老师的招生推广活动】
+上海组准备做一次豆瓣同城活动，邀请王晓渔老师参加，主题为「当我们谈论大学的时候，我们谈论什么」。同样支持。尽快落实吧。【建议上海组同时考虑朱海就老师的招生推广活动】
 
 ——北京组也在计划做这样的活动，详见蔡伟在群共享里发的研修班传播方案。
 
 需要成都组留意的就是，研修班导师的招生推广工作需要多做努力，冉云飞、邢宏伟老师的推广，建议也采纳上海组、北京组准备发起的豆瓣同城活动。
 
-成都组原来有一个“夏天一起去成都”的计划，不知道现在进展如何？建议开始整理相关导师、场地资源，进入实质的传播阶段。
+成都组原来有一个「夏天一起去成都」的计划，不知道现在进展如何？建议开始整理相关导师、场地资源，进入实质的传播阶段。
 
 此外，各组还有一些其他的推广活动，包括上海组在长沙的推广（广州组可能也有武汉、厦门的推广），以及前面提到的一些其他平台（如北斗网、各地讲座网、公共空间等的推广），建议尽快进入具体实施。
 
@@ -184,7 +184,7 @@
 ### 5.	研修班推广活动
 
 研修班招生推广目前开展得比较艰难。需要大家的创意。
-北京组蔡伟提出一个设想，除了“守株待兔”等待青年人群知道我们后报名，我们可以通过豆瓣网等平台，发现适合我们的学员。例如，根据立大或研修班导师指定书目，寻找“读过”此书的人，阅读他们的书评，主动邀请参加我们研修班（包括游学班）。
+北京组蔡伟提出一个设想，除了「守株待兔」等待青年人群知道我们后报名，我们可以通过豆瓣网等平台，发现适合我们的学员。例如，根据立大或研修班导师指定书目，寻找「读过」此书的人，阅读他们的书评，主动邀请参加我们研修班（包括游学班）。
 
 配合这个创意，需要解决的是这几个问题：
 
@@ -192,7 +192,7 @@
 
 发起豆瓣活动，包括同城活动（如导师的学思分享会、读书会等）；
 
-设计一个“免试通知”或者有相近意味的图形、标识（如“橄榄枝”）；
+设计一个「免试通知」或者有相近意味的图形、标识（如「橄榄枝」）；
 
 每名导师需要 2 至 3 名义工承担以上工作。
 
@@ -200,7 +200,7 @@
 
 ### 6.	整体层面将要推出的计划及需要的支持
 
-萤火虫计划：这一项计划在由原立人图书馆精忠图书馆馆长刘苏飏起草方案，后期会需要大家的创意与实际执行的支持。目前需要的实质支持是，苇杭与旭超为将来的“萤火虫”设计明信片、徽标等产品。具体已和苇杭沟通。
+萤火虫计划：这一项计划在由原立人图书馆精忠图书馆馆长刘苏飏起草方案，后期会需要大家的创意与实际执行的支持。目前需要的实质支持是，苇杭与旭超为将来的「萤火虫」设计明信片、徽标等产品。具体已和苇杭沟通。
 
 火石计划：上海组华夏在起草方案，希望尽早出来草案。以配合各组寻找导师、传播推广的需要。草案出来后，希望更多同学支持。
 
@@ -208,7 +208,7 @@
 
 ### 7.	集中培训计划
 
-按照计划，今年的“一起办学”义工将组织集中培训（培训资金正在筹集中），以进行团队建设、方案策划、制度建设等。由于我们分散各地，今年暑期将承担四个城市的几乎全部游学策划和组织，这个集中培训尤为重要。
+按照计划，今年的「一起办学」义工将组织集中培训（培训资金正在筹集中），以进行团队建设、方案策划、制度建设等。由于我们分散各地，今年暑期将承担四个城市的几乎全部游学策划和组织，这个集中培训尤为重要。
 
 培训初步计划在中部某省份，五一期间，提醒大家提前做好时间安排。
 
@@ -226,13 +226,13 @@
 
 我很无辜地说，苇杭，实际上目前能在这里专职运转立大的，就只有欧阳，还有大半个英强。当然小树、爱哲、谭丽、一夏都部分地参与了现在的工作，还会有人在暑期实际到达各地作为应急需要，比如小树参与了出题，一夏参与了义工初审，阿飞会参与应急，等等。
 
-在我们的理解里，立大是在“升级”，因为要独立运营，要建设更大的团队，但我们需要忍受一个这样的过程，我们要花至少半年的时间，实现以义工小组为核心的运营团队，向有三五个专职人员的运营团队转换。
+在我们的理解里，立大是在「升级」，因为要独立运营，要建设更大的团队，但我们需要忍受一个这样的过程，我们要花至少半年的时间，实现以义工小组为核心的运营团队，向有三五个专职人员的运营团队转换。
 
 但即使这样，我和英强没有放弃对所有义工最大可能的支持，似乎我们就是一个完全健全的筹委会。比如说，我们要极力促成培训，比如说，我们会极力保障暑期实际游学期间会有立人的核心成员参与应急，等等。
 
 因此，聪明的你们应该会知道，你们现在就是核心的运营团队本身。我们希望有人会在下半年、明年，成为专职团队的成员。希望我们能彼此接受这样的考验。
 
-经受住这样的考验不是很容易。我们在招募这样一支义工团队的时候，就特别考虑了报名者的“创业”潜能和创造力，当然包括意志力。大凡在面试过程中说，“我来帮个忙”，或者对立大知之甚少的人，我们没有纳入这样一支团队。因为我们一开始就很明确，我们要招募的是一支和我们一起成长、一起创造无限可能的团队。
+经受住这样的考验不是很容易。我们在招募这样一支义工团队的时候，就特别考虑了报名者的「创业」潜能和创造力，当然包括意志力。大凡在面试过程中说，「我来帮个忙」，或者对立大知之甚少的人，我们没有纳入这样一支团队。因为我们一开始就很明确，我们要招募的是一支和我们一起成长、一起创造无限可能的团队。
 
 什么样的人可以一直在这样的团队中，并且承担起立人大学走向社会企业或者成为一个对中国的高等教育极有贡献的民间教育行动的重大使命和责任？
 
@@ -262,11 +262,11 @@
 
 我很意外地听到，有人把立人大学和一种极危险的政治行动绑在一起，并且愿意将这样的想象作为事实，告诉其他人。
 
-这样的判断让我觉得很遗憾。立人大学早在南方周末方可成的笔下呈现得几乎无遗：“大学在人间”，有没有人读懂这一句诗意的话，它描述了一种景象——大学、教育，不只是在校园里，不只是在教育部规划的范围里，大学在人间，可以由你我创造，自主构造。
+这样的判断让我觉得很遗憾。立人大学早在南方周末方可成的笔下呈现得几乎无遗：「大学在人间」，有没有人读懂这一句诗意的话，它描述了一种景象——大学、教育，不只是在校园里，不只是在教育部规划的范围里，大学在人间，可以由你我创造，自主构造。
 
 是的，这样的做法本身就有对体制的反叛，因为现行的体制不允许大学在民间，它要求大学在某些思想体系内，在某些评价体系内，在某些纲要和规划内，尤其是，必须在审批的范围内……
 
-是的，立人大学的课堂里有国家、民主、自由，立人大学的自主活动有不被审核的社团、有恣意而作的话剧、有叫做“死亡”的诗社，立人大学的学员有时候喜欢骂几句“滚他妈的蛋”……
+是的，立人大学的课堂里有国家、民主、自由，立人大学的自主活动有不被审核的社团、有恣意而作的话剧、有叫做「死亡」的诗社，立人大学的学员有时候喜欢骂几句「滚他妈的蛋」……
 
 我们甚至不那么热爱学术权威、公知分子。
 
@@ -288,7 +288,7 @@
 
 ### 3．	每个人要做什么？
 
-我想有些伙伴已经开始意识到，不用等着“组织”去定义自己该做什么，自己可以用自己的方式去做点什么，每个人都在做事，这就是在这个团队初期能发挥得最好的状态。如果有问题，相信我们会有时间去调整，以达到另外一个更好的状态。
+我想有些伙伴已经开始意识到，不用等着「组织」去定义自己该做什么，自己可以用自己的方式去做点什么，每个人都在做事，这就是在这个团队初期能发挥得最好的状态。如果有问题，相信我们会有时间去调整，以达到另外一个更好的状态。
 
 最重要的是，Doing！Now！
 
@@ -296,6 +296,6 @@
 
 祝愿安好。
 
-欧阳 
+欧阳
 
 2013/3/24于北京
